# ai-flywheel

./: .gitignore  AGENTS.md  CLAUDE.md  FLYWHEEL.md  README.md  REFERENCES.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: spark_train_worker.py
src/aiflywheel/: __init__.py  __main__.py  engine.py  organism.py  plugins.py
src/aiflywheel/adaptive/: threshold.py
src/aiflywheel/backends/: trl_learner.py
src/aiflywheel/contract/: sdk.py
src/aiflywheel/core/: interaction.py  learner.py  provenance.py  reward.py
src/aiflywheel/curation/: curator.py
src/aiflywheel/explore/: curiosity.py
src/aiflywheel/ingest/: event_log.py
src/aiflywheel/introspection/: self_model.py
src/aiflywheel/learning/: hub.py
src/aiflywheel/metrics/: accelerometer.py  attribution.py  judge.py  promotion.py
src/aiflywheel/persistence/: store.py
src/aiflywheel/reflection/: recall.py  whycase.py
src/aiflywheel/safety/: sanitizer.py
src/aiflywheel/tenancy/: tenant.py
tests/: test_adaptive_threshold.py  test_brain_integration.py  test_curator_judge_lift.py  test_explore_organism.py  test_flywheel_e2e.py  test_isolation.py  test_kanon_and_hardening.py  test_loop_closure.py  test_provenance.py  test_reflection.py  test_reward_and_persistence.py  test_sanitizer.py  test_self_model.py  test_trl_learner.py
