[project]
name = "aiflywheel"
version = "0.1.0"
description = "A horizontal, multi-tenant, business-agnostic AI data flywheel engine. Vertical copilots plug in as isolated tenants; each gets smarter from the anonymized learnings of all."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rblake2320" }]
keywords = ["ai", "flywheel", "mlops", "multi-tenant", "data-flywheel", "continual-learning"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/rblake2320/ai-flywheel"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
